--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "dependencies": {
     "@prisma/client": "6.10.1",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "tsup": "^8.5.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.7",
     "nodemon": "^3.1.10",
